--- a/index.html
+++ b/index.html
@@ -3,70 +3,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Marketing & Consultancy voor ambitieuze KMO’s | Buscemi Group</title>
   <meta name="description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
   <link rel="canonical" href="https://buscemigroup.be/" />
-  <meta name="theme-color" content="#0d1425" />
-
-  <!-- Fonts -->
+  <meta name="theme-color" content="#0a3d2c" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Icons & PWA -->
   <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
-
-  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://buscemigroup.be/" />
   <meta property="og:site_name" content="Buscemi Group" />
   <meta property="og:title" content="Marketing & Consultancy voor ambitieuze KMO’s" />
   <meta property="og:description" content="Wij helpen KMO’s groeien met praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
-  <meta property="og:locale" content="nl_BE" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Marketing & Consultancy voor ambitieuze KMO’s" />
-  <meta name="twitter:description" content="Wij helpen KMO’s groeien met praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
-  <meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
-
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Buscemi Group",
-    "url": "https://buscemigroup.be/",
-    "logo": "https://buscemigroup.be/assets/logo.png",
-    "email": "info@buscemigroup.be"
-  }
-  </script>
-
-  <style>
-    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
-    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
-  </style>
 </head>
 <body>
-  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
-
   <header class="site-header">
     <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-
-      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu">
-        <span class="burger-line"></span>
-        <span class="burger-line"></span>
-        <span class="burger-line"></span>
-      </button>
-
-      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie" aria-hidden="true">
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie">
         <ul class="menu">
           <li><a href="/over.html" data-nav-link>Over</a></li>
           <li>
@@ -82,43 +42,32 @@
           <li><a href="/contact.html" data-nav-link>Contact</a></li>
         </ul>
       </nav>
-
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu"></button>
     </div>
   </header>
 
   <main id="main">
     <section class="hero">
       <div class="container hero-container">
-        <div class="hero-content">
-          <p class="kicker">KMO-expertise • Meetbare groei</p>
-          <h1>Marketing & Consultancy voor <span class="accent">KMO’s</span></h1>
-          <p class="sub">Wij helpen KMO’s groeien met een heldere strategie en efficiënte uitvoering. We combineren praktijkervaring met marketingexpertise.</p>
-          <div class="hero-actions">
-            <a class="btn" href="/contact.html">Plan kennismaking</a>
-            <a class="btn alt" href="Website/diensten/index.html">Onze diensten</a>
-          </div>
+        <p class="kicker">KMO-expertise • Meetbare groei</p>
+        <h1>Marketing & Consultancy voor <span class="accent">KMO’s</span></h1>
+        <p class="sub">Wij helpen KMO’s groeien met een heldere strategie en efficiënte uitvoering. We combineren praktijkervaring met marketingexpertise.</p>
+        <div class="hero-actions">
+          <a class="btn" href="/contact.html">Plan kennismaking</a>
+          <a class="btn alt" href="/diensten/">Onze diensten</a>
         </div>
         <div class="hero-aside">
-            <ul class="feature-list">
-                <li>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg>
-                    <span>Strategie en uitvoering onder één dak</span>
-                </li>
-                <li>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>
-                    <span>Heldere rapportering en concrete next steps</span>
-                </li>
-                <li>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.28 9.03a5 5 0 1 0-9.56 0"/><path d="M12 12a5 5 0 0 0-5 5v3h10v-3a5 5 0 0 0-5-5z"/></svg>
-                    <span>Focus op rendement en efficiëntie</span>
-                </li>
-            </ul>
+          <ul class="feature-list">
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg> <span>Strategie en uitvoering onder één dak</span></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg> <span>Heldere rapportering en concrete next steps</span></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.28 9.03a5 5 0 1 0-9.56 0"/><path d="M12 12a5 5 0 0 0-5 5v3h10v-3a5 5 0 0 0-5-5z"/></svg> <span>Focus op rendement en efficiëntie</span></li>
+          </ul>
         </div>
       </div>
     </section>
 
-    <section class="services-section fade-in-section">
+    <section class="services-section section surface">
       <div class="container">
         <div class="section-header">
           <p class="kicker">Onze Diensten</p>
@@ -126,91 +75,83 @@
           <p class="sub">Strategisch advies en marketing die meetbaar resultaat opleveren, afgestemd op uw realiteit.</p>
         </div>
         <div class="services-grid">
-          <a href="/diensten/marketing.html" class="card service-card">
-            <div class="service-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"/><path d="M12 14c-2.76 0-5 2.24-5 5v2h10v-2c0-2.76-2.24-5-5-5z"/></svg>
-            </div>
+          <a href="/diensten/marketing.html" class="card">
+            <div class="service-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"/><path d="M12 14c-2.76 0-5 2.24-5 5v2h10v-2c0-2.76-2.24-5-5-5z"/></svg></div>
             <h3>Marketing</h3>
             <p>Van social media tot advertenties: we bouwen een consistente merkbeleving en campagnes die presteren.</p>
-            <span class="card-link">Lees meer</span>
+            <span class="card-link">Lees meer <span class="arrow">→</span></span>
           </a>
-          <a href="/diensten/consultancy.html" class="card service-card">
-            <div class="service-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 14 4-4"/><path d="M16 14H8"/><path d="M20 18v-5a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2z"/></svg>
-            </div>
+          <a href="/diensten/consultancy.html" class="card">
+            <div class="service-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 14 4-4"/><path d="M16 14H8"/><path d="M20 18v-5a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2z"/></svg></div>
             <h3>Consultancy</h3>
             <p>Kostenoptimalisatie, strategie en efficiëntie — we vertalen inzichten naar een concreet groeiplan.</p>
-            <span class="card-link">Lees meer</span>
+            <span class="card-link">Lees meer <span class="arrow">→</span></span>
           </a>
         </div>
       </div>
     </section>
 
-    <section class="process-section fade-in-section">
-        <div class="container">
-            <div class="section-header">
-                <p class="kicker">Onze Werkwijze</p>
-                <h2>Een heldere aanpak in 3 stappen</h2>
-            </div>
-            <div class="process-grid">
-                <div class="card process-card">
-                    <div class="process-number">01</div>
-                    <h3>Analyse</h3>
-                    <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
-                </div>
-                <div class="card process-card">
-                    <div class="process-number">02</div>
-                    <h3>Plan</h3>
-                    <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
-                </div>
-                <div class="card process-card">
-                    <div class="process-number">03</div>
-                    <h3>Uitvoering</h3>
-                    <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="testimonial-section fade-in-section">
+    <section class="process-section section">
       <div class="container">
-        <figure class="testimonial-card">
-          <blockquote>
-            <p>“Buscemi Group bracht structuur en focus in onze aanpak. Binnen drie maanden zagen we een duidelijke groei in kwalitatieve leads én een betere marge.”</p>
-          </blockquote>
-          <figcaption>
-            <span class="testimonial-name">Iris Van Hauwenis</span>
-            <span class="testimonial-role">CEO van Studio Flowerpower </span>
-          </figcaption>
-        </figure>
+        <div class="section-header">
+          <p class="kicker">Onze Werkwijze</p>
+          <h2>Een heldere aanpak in 3 stappen</h2>
+        </div>
+        <div class="process-grid">
+          <div class="card">
+            <div class="process-number">01</div>
+            <h3>Analyse</h3>
+            <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
+          </div>
+          <div class="card">
+            <div class="process-number">02</div>
+            <h3>Plan</h3>
+            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
+          </div>
+          <div class="card">
+            <div class="process-number">03</div>
+            <h3>Uitvoering</h3>
+            <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section class="insights-section fade-in-section">
-        <div class="container">
-            <div class="section-header">
-                <p class="kicker">Insights</p>
-                <h2>Recente artikels & tips</h2>
-                <p class="sub">Praktische inzichten die u vandaag kan toepassen.</p>
-            </div>
-            <div class="insights-grid">
-                <a class="card insight-card" href="/insights/social-strategie-30-min.html">
-                    <span class="badge">Marketing</span>
-                    <h3>Social strategie in 30 minuten per week</h3>
-                    <p>Snel impact zonder fulltime social team: zo hou je structuur in 30 minuten per week.</p>
-                    <span class="card-link">Lees artikel</span>
-                </a>
-                <a class="card insight-card" href="/insights/kosten-besparen-met-data.html">
-                    <span class="badge">Consultancy</span>
-                    <h3>Kosten besparen met data-analyse</h3>
-                    <p>Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige, gerichte analyses.</p>
-                    <span class="card-link">Lees artikel</span>
-                </a>
-            </div>
+    <section class="testimonial-section section">
+      <div class="container">
+        <div class="testimonial-card">
+          <blockquote><p>“Buscemi Group bracht structuur en focus in onze aanpak. Binnen drie maanden zagen we een duidelijke groei in kwalitatieve leads én een betere marge.”</p></blockquote>
+          <figcaption>
+            <span class="testimonial-name">Iris Van Hauwenis</span>
+            <span class="testimonial-role">CEO van Studio Flowerpower</span>
+          </figcaption>
         </div>
+      </div>
     </section>
 
-    <section class="cta-section fade-in-section">
+    <section class="insights-section section surface">
+      <div class="container">
+        <div class="section-header">
+          <p class="kicker">Insights</p>
+          <h2>Recente artikels & tips</h2>
+          <p class="sub">Praktische inzichten die u vandaag kan toepassen.</p>
+        </div>
+        <div class="insights-grid">
+          <a class="card" href="/insights/social-strategie-30-min.html">
+            <h3>Social strategie in 30 minuten per week</h3>
+            <p>Snel impact zonder fulltime social team: zo hou je structuur in 30 minuten per week.</p>
+            <span class="card-link">Lees artikel <span class="arrow">→</span></span>
+          </a>
+          <a class="card" href="/insights/kosten-besparen-met-data.html">
+            <h3>Kosten besparen met data-analyse</h3>
+            <p>Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige, gerichte analyses.</p>
+            <span class="card-link">Lees artikel <span class="arrow">→</span></span>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
           <h2>Klaar om uw bedrijf te laten groeien?</h2>
@@ -242,14 +183,10 @@
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
   <script src="/nav.js" defer></script>
-
   <script>
-    // Lazy load year in footer
     document.addEventListener('DOMContentLoaded', function () {
       const yearEl = document.getElementById('year');
       if (yearEl) yearEl.textContent = new Date().getFullYear();
-
-      // Intersection Observer for fade-in animations
       const sections = document.querySelectorAll('.fade-in-section');
       const observer = new IntersectionObserver((entries) => {
         entries.forEach(entry => {
@@ -259,14 +196,8 @@
           }
         });
       }, { threshold: 0.1 });
-
-      sections.forEach(section => {
-        observer.observe(section);
-      });
+      sections.forEach(section => { observer.observe(section); });
     });
   </script>
-
-  <noscript><style>.fade-in-section { opacity: 1; transform: none; } [data-nav-menu]{display:block!important}</style></noscript>
-
 </body>
 </html>
