--- a/index.html
+++ b/index.html
@@ -50,19 +50,11 @@
   <main id="main">
     <section class="hero">
       <div class="container hero-container">
-        <p class="kicker">KMO-expertise • Meetbare groei</p>
-        <h1>Marketing & Consultancy voor <span class="accent">KMO’s</span></h1>
-        <p class="sub">Wij helpen KMO’s groeien met een heldere strategie en efficiënte uitvoering. We combineren praktijkervaring met marketingexpertise.</p>
+        <h1>Strategische groei voor KMO's</h1>
+        <p class="sub">Wij vertalen uw ambitie naar meetbaar resultaat met doelgerichte marketing en praktisch advies. Geen wollige rapporten, wel concrete impact.</p>
         <div class="hero-actions">
-          <a class="btn" href="/contact.html">Plan kennismaking</a>
-          <a class="btn alt" href="/diensten/">Onze diensten</a>
-        </div>
-        <div class="hero-aside">
-          <ul class="feature-list">
-            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg> <span>Strategie en uitvoering onder één dak</span></li>
-            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg> <span>Heldere rapportering en concrete next steps</span></li>
-            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.28 9.03a5 5 0 1 0-9.56 0"/><path d="M12 12a5 5 0 0 0-5 5v3h10v-3a5 5 0 0 0-5-5z"/></svg> <span>Focus op rendement en efficiëntie</span></li>
-          </ul>
+          <a class="btn" href="/contact.html">Start met een gesprek</a>
+          <a class="btn alt" href="/diensten/">Ontdek onze diensten</a>
         </div>
       </div>
     </section>
@@ -70,22 +62,22 @@
     <section class="services-section section surface">
       <div class="container">
         <div class="section-header">
-          <p class="kicker">Onze Diensten</p>
-          <h2>Wat we doen voor uw KMO</h2>
-          <p class="sub">Strategisch advies en marketing die meetbaar resultaat opleveren, afgestemd op uw realiteit.</p>
+          <p class="kicker">Expertise</p>
+          <h2>Een partner in marketing & consultancy</h2>
+          <p class="sub">We combineren strategisch inzicht met hands-on uitvoering, perfect afgestemd op de realiteit van een KMO.</p>
         </div>
         <div class="services-grid">
           <a href="/diensten/marketing.html" class="card">
             <div class="service-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"/><path d="M12 14c-2.76 0-5 2.24-5 5v2h10v-2c0-2.76-2.24-5-5-5z"/></svg></div>
             <h3>Marketing</h3>
-            <p>Van social media tot advertenties: we bouwen een consistente merkbeleving en campagnes die presteren.</p>
-            <span class="card-link">Lees meer <span class="arrow">→</span></span>
+            <p>Van social media tot SEO. We bouwen een sterk merk en campagnes die converteren, met focus op ROI.</p>
+            <span class="card-link">Meer over marketing <span class="arrow">→</span></span>
           </a>
           <a href="/diensten/consultancy.html" class="card">
             <div class="service-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 14 4-4"/><path d="M16 14H8"/><path d="M20 18v-5a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2z"/></svg></div>
             <h3>Consultancy</h3>
-            <p>Kostenoptimalisatie, strategie en efficiëntie — we vertalen inzichten naar een concreet groeiplan.</p>
-            <span class="card-link">Lees meer <span class="arrow">→</span></span>
+            <p>Kostenanalyse, procesoptimalisatie en een heldere roadmap. We maken uw bedrijf efficiënter en winstgevender.</p>
+            <span class="card-link">Meer over consultancy <span class="arrow">→</span></span>
           </a>
         </div>
       </div>
@@ -101,17 +93,17 @@
           <div class="card">
             <div class="process-number">01</div>
             <h3>Analyse</h3>
-            <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
+            <p>Een diepgaande scan van uw data, processen en marktpositie. We definiëren samen haalbare doelstellingen.</p>
           </div>
           <div class="card">
             <div class="process-number">02</div>
-            <h3>Plan</h3>
-            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
+            <h3>Strategie</h3>
+            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. We focussen op quick wins en duurzame groei.</p>
           </div>
           <div class="card">
             <div class="process-number">03</div>
-            <h3>Uitvoering</h3>
-            <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
+            <h3>Implementatie</h3>
+            <p>Continue opvolging, bijsturing en heldere rapportages. We garanderen executie en resultaat.</p>
           </div>
         </div>
       </div>
@@ -120,7 +112,7 @@
     <section class="testimonial-section section">
       <div class="container">
         <div class="testimonial-card">
-          <blockquote><p>“Buscemi Group bracht structuur en focus in onze aanpak. Binnen drie maanden zagen we een duidelijke groei in kwalitatieve leads én een betere marge.”</p></blockquote>
+          <blockquote><p>“De samenwerking met Buscemi Group heeft ons niet alleen een heldere marketingstrategie opgeleverd, maar ook concrete procesverbeteringen die onze marge significant hebben verhoogd.”</p></blockquote>
           <figcaption>
             <span class="testimonial-name">Iris Van Hauwenis</span>
             <span class="testimonial-role">CEO van Studio Flowerpower</span>
@@ -129,34 +121,12 @@
       </div>
     </section>
 
-    <section class="insights-section section surface">
-      <div class="container">
-        <div class="section-header">
-          <p class="kicker">Insights</p>
-          <h2>Recente artikels & tips</h2>
-          <p class="sub">Praktische inzichten die u vandaag kan toepassen.</p>
-        </div>
-        <div class="insights-grid">
-          <a class="card" href="/insights/social-strategie-30-min.html">
-            <h3>Social strategie in 30 minuten per week</h3>
-            <p>Snel impact zonder fulltime social team: zo hou je structuur in 30 minuten per week.</p>
-            <span class="card-link">Lees artikel <span class="arrow">→</span></span>
-          </a>
-          <a class="card" href="/insights/kosten-besparen-met-data.html">
-            <h3>Kosten besparen met data-analyse</h3>
-            <p>Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige, gerichte analyses.</p>
-            <span class="card-link">Lees artikel <span class="arrow">→</span></span>
-          </a>
-        </div>
-      </div>
-    </section>
-
     <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
-          <h2>Klaar om uw bedrijf te laten groeien?</h2>
-          <p>Plan een vrijblijvend kennismakingsgesprek en ontdek wat we voor u kunnen betekenen.</p>
-          <a class="btn" href="/contact.html">Plan kennismaking</a>
+          <h2>Klaar voor de volgende stap?</h2>
+          <p>Laten we vrijblijvend bespreken hoe we uw bedrijf kunnen helpen groeien. Plan een kennismakingsgesprek op een moment dat u past.</p>
+          <a class="btn" href="/contact.html">Plan een gesprek</a>
         </div>
       </div>
     </section>
@@ -187,16 +157,6 @@
     document.addEventListener('DOMContentLoaded', function () {
       const yearEl = document.getElementById('year');
       if (yearEl) yearEl.textContent = new Date().getFullYear();
-      const sections = document.querySelectorAll('.fade-in-section');
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('is-visible');
-            observer.unobserve(entry.target);
-          }
-        });
-      }, { threshold: 0.1 });
-      sections.forEach(section => { observer.observe(section); });
     });
   </script>
 </body>
