--- a/over.html
+++ b/over.html
@@ -50,21 +50,21 @@
   <main id="main">
     <section class="subpage-hero">
       <div class="container">
-        <p class="kicker">Onze Missie</p>
-        <h1>Een partner die meedenkt én meedoet</h1>
-        <p class="sub">Wij helpen KMO’s groeien met strategie die werkt. Geen wollige presentaties, wel concreet advies en uitvoering met focus op resultaat.</p>
+        <p class="kicker">Onze Filosofie</p>
+        <h1>Uw strategische partner in groei</h1>
+        <p class="sub">Wij bouwen aan de toekomst van KMO's met strategieën die werken. Geen aannames, wel data. Geen complexe theorie, wel concrete actieplannen.</p>
       </div>
     </section>
 
     <section class="content-section section">
       <div class="container" style="max-width: 900px;">
-        <h2>Wat ons drijft</h2>
-        <p class="lead">We combineren praktijkervaring in KMO-management met diepgaande marketingexpertise. Zo ontwikkelen we strategieën die niet alleen ambitieus, maar vooral ook uitvoerbaar zijn, met een meetbare impact op uw omzet, marge en efficiëntie.</p>
-        <p>Onze aanpak is gebouwd op transparantie en samenwerking. We worden een verlengstuk van uw team om doelen te realiseren die er echt toe doen. We luisteren, analyseren en handelen — altijd met uw bedrijfsdoelstellingen als leidraad.</p>
+        <h2>Gedreven door resultaat</h2>
+        <p class="lead">Onze aanpak combineert jarenlange managementervaring in KMO's met diepgaande marketingexpertise. Hierdoor ontwikkelen we strategieën die niet alleen ambitieus zijn, maar vooral uitvoerbaar en rendabel. We meten succes aan de hand van uw groei: in omzet, marge en efficiëntie.</p>
+        <p>Transparantie en samenwerking vormen de kern van onze dienstverlening. We functioneren als een verlengstuk van uw team, met een gedeelde focus op uw bedrijfsdoelstellingen. We luisteren, analyseren en handelen — altijd met uw succes als einddoel.</p>
         <ul class="feature-list" style="margin-top: 3rem; justify-content: flex-start; text-align: left; gap: 1rem 2rem; flex-direction: column; align-items: flex-start;">
-            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg> <span>Strategie en uitvoering onder één dak</span></li>
-            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg> <span>Heldere rapportering en concrete next steps</span></li>
-            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.28 9.03a5 5 0 1 0-9.56 0"/><path d="M12 12a5 5 0 0 0-5 5v3h10v-3a5 5 0 0 0-5-5z"/></svg> <span>Focus op rendement en operationele efficiëntie</span></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg> <span><strong>Integrale aanpak:</strong> Strategie en uitvoering onder één dak.</span></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg> <span><strong>Heldere rapportering:</strong> Continue inzichten en concrete next steps.</span></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.28 9.03a5 5 0 1 0-9.56 0"/><path d="M12 12a5 5 0 0 0-5 5v3h10v-3a5 5 0 0 0-5-5z"/></svg> <span><strong>Focus op ROI:</strong> Elke actie gericht op rendement en efficiëntie.</span></li>
         </ul>
       </div>
     </section>
@@ -76,20 +76,20 @@
           <h2>Een heldere aanpak in 3 stappen</h2>
         </div>
         <div class="process-grid">
-          <div class="card">
+           <div class="card">
             <div class="process-number">01</div>
             <h3>Analyse</h3>
-            <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
+            <p>Een diepgaande scan van uw data, processen en marktpositie. We definiëren samen haalbare doelstellingen.</p>
           </div>
           <div class="card">
             <div class="process-number">02</div>
-            <h3>Plan</h3>
-            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
+            <h3>Strategie</h3>
+            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. We focussen op quick wins en duurzame groei.</p>
           </div>
           <div class="card">
             <div class="process-number">03</div>
-            <h3>Uitvoering</h3>
-            <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
+            <h3>Implementatie</h3>
+            <p>Continue opvolging, bijsturing en heldere rapportages. We garanderen executie en resultaat.</p>
           </div>
         </div>
       </div>
@@ -98,9 +98,9 @@
     <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
-          <h2>Klaar om uw bedrijf te laten groeien?</h2>
-          <p>Plan een vrijblijvend kennismakingsgesprek en ontdek wat we voor u kunnen betekenen.</p>
-          <a class="btn" href="/contact.html">Plan kennismaking</a>
+          <h2>Klaar voor de volgende stap?</h2>
+          <p>Laten we vrijblijvend bespreken hoe we uw bedrijf kunnen helpen groeien. Plan een kennismakingsgesprek op een moment dat u past.</p>
+          <a class="btn" href="/contact.html">Plan een gesprek</a>
         </div>
       </div>
     </section>
