--- a/diensten/index.html
+++ b/diensten/index.html
@@ -52,7 +52,7 @@
       <div class="container">
         <p class="kicker">Onze Diensten</p>
         <h1>Marketing & Consultancy voor <span class="accent">ambitieuze KMO’s</span></h1>
-        <p class="sub">Heldere strategie, praktische uitvoering en meetbare KPI’s. We stemmen scope en tempo af op uw doelen.</p>
+        <p class="sub">Heldere strategie, praktische uitvoering en meetbare KPI’s. We stemmen scope en tempo af op uw unieke doelen.</p>
       </div>
     </section>
 
@@ -62,13 +62,13 @@
           <a href="/diensten/marketing.html" class="card">
             <div class="service-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"/><path d="M12 14c-2.76 0-5 2.24-5 5v2h10v-2c0-2.76-2.24-5-5-5z"/></svg></div>
             <h3>Marketing</h3>
-            <p>Consistente branding, content en campagnes die presteren. Van planning tot rapportering.</p>
+            <p>We bouwen een sterk merk en campagnes die converteren, met een consistente focus op ROI en merkgroei.</p>
             <span class="card-link">Ontdek Marketing <span class="arrow">→</span></span>
           </a>
           <a href="/diensten/consultancy.html" class="card">
             <div class="service-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 14 4-4"/><path d="M16 14H8"/><path d="M20 18v-5a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2z"/></svg></div>
             <h3>Consultancy</h3>
-            <p>Kosten omlaag, processen strakker en doelen helder. Een plan dat u meteen kan uitvoeren.</p>
+            <p>We verhogen uw marge en efficiëntie door kosten te analyseren, processen te optimaliseren en een heldere roadmap uit te stippelen.</p>
             <span class="card-link">Ontdek Consultancy <span class="arrow">→</span></span>
           </a>
         </div>
@@ -85,17 +85,17 @@
           <div class="card">
             <div class="process-number">01</div>
             <h3>Analyse</h3>
-            <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
+            <p>Een diepgaande scan van uw data, processen en marktpositie. We definiëren samen haalbare doelstellingen.</p>
           </div>
           <div class="card">
             <div class="process-number">02</div>
-            <h3>Plan</h3>
-            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
+            <h3>Strategie</h3>
+            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. We focussen op quick wins en duurzame groei.</p>
           </div>
           <div class="card">
             <div class="process-number">03</div>
-            <h3>Uitvoering</h3>
-            <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
+            <h3>Implementatie</h3>
+            <p>Continue opvolging, bijsturing en heldere rapportages. We garanderen executie en resultaat.</p>
           </div>
         </div>
       </div>
@@ -110,19 +110,19 @@
         <div class="faq-grid">
           <div class="card">
             <h3>Kunnen we klein starten?</h3>
-            <p>Ja. We starten vaak met een compacte quickscan of proefperiode, daarna schalen we op.</p>
+            <p>Absoluut. We starten vaak met een compacte audit of een afgebakend proefproject. Zo bewijzen we onze waarde voor we opschalen.</p>
           </div>
           <div class="card">
-            <h3>Wanneer zie ik resultaat?</h3>
-            <p>Meestal binnen 2–3 maanden; quick wins vaak sneller, afhankelijk van uw startpositie.</p>
+            <h3>Wanneer zien we resultaat?</h3>
+            <p>U ziet de eerste 'quick wins' vaak al binnen de eerste maand. Structurele resultaten zijn doorgaans binnen 2-3 maanden zichtbaar.</p>
           </div>
           <div class="card">
             <h3>Werken jullie met lange contracten?</h3>
-            <p>We werken met duidelijke milestones en evalueren per kwartaal — flexibel en transparant.</p>
+            <p>Nee. We werken met flexibele overeenkomsten en duidelijke kwartaaldoelstellingen. Transparant en zonder risico.</p>
           </div>
           <div class="card">
             <h3>Hoe verloopt de rapportering?</h3>
-            <p>Maandelijks met KPI’s, inzichten en concrete next steps, zodat u gericht kan bijsturen.</p>
+            <p>U ontvangt een beknopt maandrapport met de belangrijkste KPI’s, onze inzichten en concrete actiepunten voor de volgende maand.</p>
           </div>
         </div>
       </div>
@@ -131,9 +131,9 @@
     <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
-          <h2>Wilt u weten wat voor uw KMO het meeste oplevert?</h2>
-          <p>Plan een vrijblijvend gesprek en ontdek de mogelijkheden.</p>
-          <a class="btn" href="/contact.html">Plan kennismaking</a>
+          <h2>Klaar voor de volgende stap?</h2>
+          <p>Laten we vrijblijvend bespreken hoe we uw bedrijf kunnen helpen groeien. Plan een kennismakingsgesprek op een moment dat u past.</p>
+          <a class="btn" href="/contact.html">Plan een gesprek</a>
         </div>
       </div>
     </section>
